Extensions: Fix context menu to show multiple top-level extension menus

crbug.com/764192 reports a regression in which only 1 of many top-level
extension-named menu items are displayed in the context menu. This bug
is namely targetted at extension-named menu items that have child items.

This CL fixes this regression such that *all* top-level extension-named
menu items are displayed in the context menu.

Bug: 764192
Change-Id: Ibac5707b3fb5416242a3e408feab579b2553b57c
Reviewed-on: https://chromium-review.googlesource.com/667950
Commit-Queue: catmullings <catmullings@chromium.org>
Reviewed-by: Istiaque Ahmed <lazyboy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502129}
Former-commit-id: 783d51fa63399dc0c7022ff06a73b2448e5632e8